update resume and links to tailslide

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <!-- One -->
       <section id="one" class="wrapper spotlight style1">
         <div class="inner">
-          <a href="https://github.com/tailslide-io" class="image"><img src="images/tailslide_white.svg" alt="Tailslide Logo" /></a>
+          <a href="https://tailslide-io.github.io/" class="image"><img src="images/tailslide_white.svg" alt="Tailslide Logo" /></a>
           <div class="content">
             <h2 class="major">Tailslide</h2>
             <p>
@@ -63,7 +63,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
             <p>
               Built using Node.js, Express, NATs JetStream, PostgreSQL, Redis Timeseries Database, React/Redux.
             </p>
-            <a href="https://tailslide.webflow.io/" class="button">Read The Case Study</a>
+            <a href="https://tailslide-io.github.io/" class="button">Read The Case Study</a>
           </div>
         </div>
       </section>
@@ -114,7 +114,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <div class="inner">
           <h2 class="major personal">Get in touch</h2>
           <ul class="contact">
-            <li class="icon solid fa-key"><a href="https://tailslide.webflow.io/">Tailslide Case Study</a></li>
+            <li class="icon solid fa-key"><a href="https://tailslide-io.github.io/">Tailslide Case Study</a></li>
             <li class="icon solid fa-envelope"><a href="mailto:jordan.shay.eggers@gmail.com">jordan.shay.eggers@gmail.com</a></li>
             <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/">Linkedin</a></li>
             <li class="icon solid fa-file"><a href="assets/files/Jordan_Eggers_Resume.pdf">Resume</a></li>
