peer review fixes

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <header id="header" class="alt">
       <h1 class="personal"><a href="#">Jordan</a></h1>
       <ul class="icons" id="icons">
-        <li><a href="assets/files/Jordan_Eggers_Resume.pdf" class="icon solid fa-file"><span class="label">Resume</span></a></li>
-        <li><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-        <li><a href="mailto:jordan.shay.eggers@gmail.com" class="icon solid fa-envelope "><span class="label">Email</span></a></li>
-        <li><a href="https://github.com/Jordanseggers" class="icon brands fa-github"><span class="label">Github</span></a></li>
+        <li><a href="assets/files/Jordan_Eggers_Resume.pdf" class="icon solid fa-file" target="_blank"><span class="label">Resume</span></a></li>
+        <li><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+        <li><a href="mailto:jordan.shay.eggers@gmail.com" class="icon solid fa-envelope " target="_blank"><span class="label">Email</span></a></li>
+        <li><a href="https://github.com/Jordanseggers" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
       </ul>
     </header>
     <canvas
@@ -44,7 +44,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         /></span>
         <h2 class="personal">Jordan Eggers</h2>
         <p class="personal">
-          I'm a NYC based Software Engineer who is passionate about creative problem-solving. Prior to architecting in the virtual realm, I was a designer of the physically built environment. Most recently, I Co-Created Tailslide, An open-source feature flag framework for easier code deployment with automated failure protection. Check out my recent projects below!
+          I'm a NYC-based Software Engineer who is passionate about creative problem-solving. Prior to architecting in the virtual realm, I was a designer of the physically built environment. Most recently, I Co-Created Tailslide, An open-source feature flag framework for easier code deployment with automated failure protection. Check out my recent projects below!
         </p>
       </div>
     </section>
@@ -54,16 +54,20 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <!-- One -->
       <section id="one" class="wrapper spotlight style1">
         <div class="inner">
-          <a href="https://tailslide-io.github.io/" class="image"><img src="images/tailslide_white.svg" alt="Tailslide Logo" /></a>
           <div class="content">
-            <h2 class="major">Tailslide</h2>
+            <h2 class="major">Tailslide  <img src="images/tailslide_white.svg" alt="Tailslide Logo"/></h2>
             <p>
-              An open-source feature flag framework for easier code deployment with automated failure protection.
+              Tailslide is an open-source, self-hosted feature flag management solution. It is designed to allow organizations with a microservices architecture to easily and safely deploy new backend features. Tailslide also monitors the performance of feature flags and leverages a customizable circuit-breaking pattern to toggle off problematic features and direct users to a predefined fallback service or feature. If circuits trip, developers are immediately notified, so they can respond appropriately. Tailslide speeds up the deployment cycle without sacrificing reliability.
             </p>
+            <div><a href="https://tailslide-io.github.io/" class="image" target="_blank"><img src="assets/gifs/logs.gif" alt="Tailslide Demo" /></a></div>
+            <p>
+              Using Tailslide, developers can perform "dark launches" - allowing for experimentation of new features in a live production environment, where only internal test accounts or beta users are served the new feature. Tailslide also allows for the safe and gradual rollout of individual features to a subset of the user base, with the ability to easily ramp up, ramp down or shut off all traffic to a specified feature.
+            </p>
+            <div><a href="https://tailslide-io.github.io/" class="image" target="_blank"><img src="images/architecture-diagram.png" alt="Tailslide Architecture" /></a></div> 
             <p>
               Built using Node.js, Express, NATs JetStream, PostgreSQL, Redis Timeseries Database, React/Redux.
             </p>
-            <a href="https://tailslide-io.github.io/" class="button">Read The Case Study</a>
+            <a href="https://tailslide-io.github.io/#case-study" class="button" target="_blank">Read The Case Study</a>
           </div>
         </div>
       </section>
@@ -102,7 +106,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
           <div class="content">
             <h2 class="major">Todo List Hub</h2>
             <p>
-              An app to collect todo Lists and monitor task progress. Built using Node.js, Express, Pug, CSS, and PostgreSQL.
+              An app to collect todo lists and monitor task progress. Built using Node.js, Express, Pug, CSS, and PostgreSQL.
             </p>
           </div>
         </div>
@@ -114,10 +118,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <div class="inner">
           <h2 class="major personal">Get in touch</h2>
           <ul class="contact">
-            <li class="icon solid fa-key"><a href="https://tailslide-io.github.io/">Tailslide Case Study</a></li>
-            <li class="icon solid fa-envelope"><a href="mailto:jordan.shay.eggers@gmail.com">jordan.shay.eggers@gmail.com</a></li>
-            <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/">Linkedin</a></li>
-            <li class="icon solid fa-file"><a href="assets/files/Jordan_Eggers_Resume.pdf">Resume</a></li>
+            <li class="icon solid fa-key"><a href="https://tailslide-io.github.io/#case-study" target="_blank">Tailslide Case Study</a></li>
+            <li class="icon solid fa-envelope"><a href="mailto:jordan.shay.eggers@gmail.com" target="_blank">jordan.shay.eggers@gmail.com</a></li>
+            <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/" target="_blank">Linkedin</a></li>
+            <li class="icon solid fa-file"><a href="assets/files/Jordan_Eggers_Resume.pdf" target="_blank">Resume</a></li>
           </ul>
           <ul class="copyright">
             <li>&copy; Jordan Eggers all rights reserved.</li>
