update resume for 2023

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         /></span>
         <h2 class="personal">Jordan Eggers</h2>
         <p class="personal">
-          I'm a NYC-based Software Engineer who is passionate about creative problem-solving. Prior to architecting in the virtual realm, I was a designer of the physically built environment. Most recently, I Co-Created Tailslide, An open-source feature flag framework for easier code deployment with automated failure protection. Check out my recent projects below!
+          I'm a NYC-based Software Engineer who is passionate about creative problem-solving. Prior to architecting in the virtual domain, I was a designer of the physically built environment. Recently, I Co-Created Tailslide, An open-source feature flag framework for easier code deployment with automated failure protection. Check out my recent projects below!
         </p>
       </div>
     </section>
