--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
       <div class="inner">
         <span class="image medium" id="headshot"
-        ><img src="images/jordan.jpeg" alt="Jordan Photo"
+        ><img src="images/Jordan.png" alt="Jordan Photo"
         /></span>
         <h2 class="personal">Jordan Eggers</h2>
         <p class="personal">
