remove resume, update bio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <header id="header" class="alt">
       <h1 class="personal"><a href="#">Jordan</a></h1>
       <ul class="icons" id="icons">
-        <li><a href="assets/files/Jordan_Eggers_Resume.pdf" class="icon solid fa-file" target="_blank"><span class="label">Resume</span></a></li>
         <li><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
         <li><a href="mailto:jordan.shay.eggers@gmail.com" class="icon solid fa-envelope " target="_blank"><span class="label">Email</span></a></li>
         <li><a href="https://github.com/Jordanseggers" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
@@ -44,7 +43,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         /></span>
         <h2 class="personal">Jordan Eggers</h2>
         <p class="personal">
-          I'm a NYC-based Software Engineer who is passionate about creative problem-solving. Prior to architecting in the virtual domain, I was a designer of the physically built environment. Recently, I Co-Created Tailslide, An open-source feature flag framework for easier code deployment with automated failure protection. Check out some recent projects below!
+          As a Software Developer at Kohn Pedersen Fox, I handle the development of three applications for the architectural staff. My career started with architecture, but a role as a BIM lead, specializing in 3D modeling, led to a chance to collaborate with developers at that same firm. Their work was so interesting that I dedicated my next couple of years to an intensive coding school journey that resulted in a full-fledged career transition to software development.
+        </p>
+        <p class="personal">
+          Check out some recent projects below!
         </p>
       </div>
     </section>
@@ -54,7 +56,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <!-- One -->
       <section id="one" class="wrapper spotlight style1">
         <div class="inner">
-          <div class="content">
+          <div class="content">s
             <h2 class="major">Tailslide  <img src="images/tailslide_white.svg" alt="Tailslide Logo"/></h2>
             <p>
               Tailslide is an open-source, self-hosted feature flag management solution. It is designed to allow organizations with a microservices architecture to easily and safely deploy new backend features. Tailslide also monitors the performance of feature flags and leverages a customizable circuit-breaking pattern to toggle off problematic features and direct users to a predefined fallback service or feature. If circuits trip, developers are immediately notified, so they can respond appropriately. Tailslide speeds up the deployment cycle without sacrificing reliability.
@@ -121,7 +123,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
             <li class="icon solid fa-key"><a href="https://tailslide-io.github.io/#case-study" target="_blank">Tailslide Case Study</a></li>
             <li class="icon solid fa-envelope"><a href="mailto:jordan.shay.eggers@gmail.com" target="_blank">jordan.shay.eggers@gmail.com</a></li>
             <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/" target="_blank">Linkedin</a></li>
-            <li class="icon solid fa-file"><a href="assets/files/Jordan_Eggers_Resume.pdf" target="_blank">Resume</a></li>
           </ul>
           <ul class="copyright">
             <li>&copy; Jordan Eggers all rights reserved.</li>
