--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <h1 class="personal"><a href="#">Jordan</a></h1>
       <ul class="icons" id="icons">
         <li><a href="https://www.linkedin.com/in/jordan-shay-eggers-software-engineer/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
-        <li><a href="mailto:jordan.shay.eggers@gmail.com" class="icon solid fa-envelope " target="_blank"><span class="label">Email</span></a></li>
+        <li><a href="mailto:jordan.shay.eggers@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
         <li><a href="https://github.com/Jordanseggers" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
       </ul>
     </header>
@@ -36,17 +36,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <!-- Banner -->
     <section id="banner">
 
-
       <div class="inner">
         <span class="image medium" id="headshot"
         ><img src="images/Jordan.png" alt="Jordan Photo"
         /></span>
         <h2 class="personal">Jordan Eggers</h2>
         <p class="personal">
-          As a Software Developer at Kohn Pedersen Fox, I handle the development of three applications for the architectural staff. My career started with architecture, but a role as a BIM lead, specializing in 3D modeling, led to a chance to collaborate with developers at that same firm. Their work was so interesting that I dedicated my next couple of years to an intensive coding school journey that resulted in a full-fledged career transition to software development.
-        </p>
-        <p class="personal">
-          Check out some recent projects below!
+          Check out some open source projects below!
         </p>
       </div>
     </section>
@@ -56,7 +52,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <!-- One -->
       <section id="one" class="wrapper spotlight style1">
         <div class="inner">
-          <div class="content">s
+          <div class="content">
             <h2 class="major">Tailslide  <img src="images/tailslide_white.svg" alt="Tailslide Logo"/></h2>
             <p>
               Tailslide is an open-source, self-hosted feature flag management solution. It is designed to allow organizations with a microservices architecture to easily and safely deploy new backend features. Tailslide also monitors the performance of feature flags and leverages a customizable circuit-breaking pattern to toggle off problematic features and direct users to a predefined fallback service or feature. If circuits trip, developers are immediately notified, so they can respond appropriately. Tailslide speeds up the deployment cycle without sacrificing reliability.
@@ -126,6 +122,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
           </ul>
           <ul class="copyright">
             <li>&copy; Jordan Eggers all rights reserved.</li>
+            <li>Based in Brooklyn, NY</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </div>
