--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         /></span>
         <h2 class="personal">Jordan Eggers</h2>
         <p class="personal">
-          Check out some open source projects below!
+          I'm a Brooklyn NY based Full-Stack Software Engineer. 
+          I currently work as part of a very small technology <a href="https://ui.kpf.com/about" target="_blank">team</a> at Kohn Pedersen Fox Associates.
+          For the past couple of years, I have primarily worked with Vue.js, JavaScript, Fastify, Node.js, Mapbox, and Tailwind
+          to build and maintain internal tools for our architectural staff. 
+          My role involves everything from front-end implementation and back-end development to setting up servers and deploying solutions
+          on AWS cloud services. I’ve developed these skills through hands-on experience, figuring things out with minimal guidance as 
+          I tackle each new challenge.
         </p>
       </div>
     </section>
@@ -50,10 +56,34 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <!-- Wrapper -->
     <section id="wrapper">
       <!-- One -->
-      <section id="one" class="wrapper spotlight style1">
+      <section id="one" class="wrapper spotlight style1">  
+        <div class="inner">
+        </div>
+      </section>
+    </section>
+
+      <!-- Two -->
+      <section id="two" class="wrapper alt spotlight style2">
+        <div class="inner">
+          <span class="image"><img src="images/comfortApp.png" alt="Comfort App" /></span>
+          <div class="content">
+            <h2 class="major">Bryant Park Comfort (KPF)</h2>
+            <p>
+              This quick project was designed to analyze and visualize the microclimate of Bryant Park. 
+              The front-end, built with Vue.js and Mapbox, provides an interactive map, 
+              while a Fastify back-end collects and formats GeoJSON data from Rhino Compute for map integration. 
+              Although smaller in scope than the internal tools I typically develop, 
+              this project is publicly accessible <a href="https://comfort.nyc.kpfui.dev/" target="_blank" style="color: white; border-bottom: 1px dotted white;">here</a>.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Three -->
+      <section id="three" class="wrapper spotlight style3">
         <div class="inner">
           <div class="content">
-            <h2 class="major">Tailslide  <img src="images/tailslide_white.svg" alt="Tailslide Logo"/></h2>
+            <h2 class="major">Tailslide (created in 2022) <img src="images/tailslide_white.svg" alt="Tailslide Logo"/></h2>
             <p>
               Tailslide is an open-source, self-hosted feature flag management solution. It is designed to allow organizations with a microservices architecture to easily and safely deploy new backend features. Tailslide also monitors the performance of feature flags and leverages a customizable circuit-breaking pattern to toggle off problematic features and direct users to a predefined fallback service or feature. If circuits trip, developers are immediately notified, so they can respond appropriately. Tailslide speeds up the deployment cycle without sacrificing reliability.
             </p>
@@ -66,46 +96,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
               Built using Node.js, Express, NATs JetStream, PostgreSQL, Redis Timeseries Database, React/Redux.
             </p>
             <a href="https://tailslide-io.github.io/#case-study" class="button" target="_blank">Read The Case Study</a>
-          </div>
-        </div>
-      </section>
-    </section>
-
-      <!-- Two -->
-      <section id="two" class="wrapper alt spotlight style2">
-        <div class="inner">
-          <span class="image"><img src="images/shoppingCart.png" alt="Shopping Cart" /></span>
-          <div class="content">
-            <h2 class="major">Shopping Cart</h2>
-            <p>
-              An inventory management app. Built using Node.js, Mongodb, and React/Redux.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Three -->
-      <section id="three" class="wrapper spotlight style3">
-        <div class="inner">
-          <span class="image"><img src="images/requestCatcher.png" alt="Request Catcher" /></span>
-          <div class="content">
-            <h2 class="major">Request Catcher</h2>
-            <p>
-              A tool to inspect and debug webhook requests. Built using Node.js, Pug, CSS Mongodb, and PostgreSQL.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Four -->
-      <section id="four" class="wrapper alt spotlight style4">
-        <div class="inner">
-          <span class="image"><img src="images/ToDoList.png" alt="Todo List" /></span>
-          <div class="content">
-            <h2 class="major">Todo List Hub</h2>
-            <p>
-              An app to collect todo lists and monitor task progress. Built using Node.js, Express, Pug, CSS, and PostgreSQL.
-            </p>
           </div>
         </div>
       </section>
