--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
           I'm a Brooklyn NY based Full-Stack Software Engineer. 
           I currently work as part of a very small technology <a href="https://ui.kpf.com/about" target="_blank">team</a> at Kohn Pedersen Fox Associates.
           For the past couple of years, I have primarily worked with Vue.js, JavaScript, Fastify, Node.js, Mapbox, and Tailwind
-          to build and maintain internal tools for our architectural staff. 
+          to build and maintain tools for our architectural staff. 
           My role involves everything from front-end implementation and back-end development to setting up servers and deploying solutions
-          on AWS cloud services. I’ve developed these skills through hands-on experience, figuring things out with minimal guidance as 
-          I tackle each new challenge.
+          on AWS cloud services.
         </p>
       </div>
     </section>
